tests/agl/rejections/type/pos_only_by_name.agl
def f(x: int, /, y: int) -> int = x + y
f(y = 3, x = 1)
